--- a/styles/header.css
+++ b/styles/header.css
@@ -26,6 +26,9 @@
     top: 100%;
     width: 60vw;
 }
+.container__botao{
+    display: none;
+}
 .container__botao:checked ~ .lista-menu{
     display: block;
 }
@@ -35,6 +38,7 @@
 }
 .lista-menu__titulo{
     color: var(--laranja);
+    font-weight: 700;
 }
 .lista-menu__link{
     background: var(--azul-degrade); 
