--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -17,3 +17,45 @@
     position:initial;
     margin: 0.5em 0;
 }
+.card{
+    background-color: var(--branco);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 0.6em;
+    margin: 1em;
+    padding: 1em;
+}
+.card__descricao{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom:0.5em;
+}
+.descricao__titulo{
+    color: var(--laranja);
+    font-weight: 700;
+}
+.descricao__titulo-livro{
+    color: var(--azul);
+    font-size: 1.3em;
+    font-weight: 700;
+    margin: 0.5em 0;
+}
+.descricao__texto{
+    font-size: 0.8em;
+}
+.card__botoes{
+    display: flex;
+    justify-content: space-between;
+}
+.botoes{
+    display: flex;
+}
+.botoes__item{
+    margin: 0 0.5em;
+}
+.botao__ancora{
+    background-color: var(--laranja);
+    padding: 1em 2.2em;
+    color: var(--branco);
+    font-weight: 700;
+    text-decoration: none;
+}
