--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
     --fonte-principal:"Poppins";
     --azul: #002F52;
     --fonte-secundaria:"Josefin Sans";
+    --preto:#000000;
 }
 body{
     background-color: var(--cor-de-fundo);
