--- a/styles/rodape.css
+++ b/styles/rodape.css
@@ -6,8 +6,37 @@ hr{
     background-color: var(--branco);
     padding: 1em;
 }
+.lista-rodape{
+    display: none;
+}
 .rodape__titulo{
     font-size: 1em;
     font-weight: 300;
     color: var(--azul);
+}
+@media screen and (min-width:1024px){
+    .rodape{
+        display: flex;
+        justify-content: space-around;
+    }
+    .lista-rodape{
+        display: block;
+    }
+    .lista-rodape__item{
+        display: flex;
+        align-items: center;
+        margin: 0.6em 0;
+    }
+    .lista-rodape__link{
+        text-decoration: none;
+        color: var(--cinza);
+        margin-left: 0.6em;
+    }
+    .lista-rodape__titulo{
+        font-size: 0.85rem;
+        color: var(--cinza-claro);
+    }
+    .rodape__titulo{
+        font-size: 1.5rem;
+    }
 }
