--- a/styles/contato.css
+++ b/styles/contato.css
@@ -46,3 +46,10 @@
         width: 30%;
     }      
 }
+
+@media screen and (min-width:1728px) {
+    .contato{
+        padding: 2em 20vw;
+    }
+    
+}
