--- a/styles/header.css
+++ b/styles/header.css
@@ -87,9 +87,26 @@
     .opcoes__botao{
         display: none;
     }
-    
+    .container__texto{
+        display: none;
+    }
 }
 
-@media screen and (min-widht: 1728px){
-    
+@media screen and (min-width: 1728px){
+    .container__texto{
+        display: block;
+    }
+    .container__link{
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+        color: var(--preto);
+    }
+    .cabecalho{
+        padding: 0em 2em;
+    }
+    .opcoes{
+        margin-right: auto;
+    }
+
 }
