--- a/styles/header.css
+++ b/styles/header.css
@@ -29,6 +29,13 @@
 .container__botao{
     display: none;
 }
+.container__botao:checked ~ .container__rotulo > .cabecalho__menu-hamburguer{
+    background-image: url(../imagens/Menu\ Aberto.svg);
+}
+.container__botao:checked ~ .container__rotulo{
+    background: var(--azul-degrade);
+    padding: 0.3em;
+}
 .container__botao:checked ~ .lista-menu{
     display: block;
 }
@@ -92,6 +99,20 @@
     }
     .container__texto{
         display: none;
+    }
+    .opcoes__botao:checked ~ .opcoes__rotulo > .opcoes__item{
+        background: var(--azul-degrade);
+        color: var(--branco);
+    }
+    .opcoes__item{
+        padding: 2em 1em;
+    }
+    .lista-menu__item:hover{
+        background: var(--azul-degrade);
+    }
+    .lista-menu__item:hover > .lista-menu__link{
+        -webkit-text-fill-color: var(--branco);
+        text-decoration: none;
     }
 }
 
